--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Bora tomar uma?</title>
+    <title>Apenas um simples convite</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1> Bora tomar uma?</h1>
+    <h1> Bora fazer Anal?</h1>
     <button id="sim">Bora!</button>
     <button id="nao">Não</button>
     <script src="script.js"></script>  
