--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1> Bora fazer Anal?</h1>
-    <button id="sim">Bora!</button>
+    <h1> Me da um aumento?</h1>
+    <button id="sim">Sim!</button>
     <button id="nao">Não</button>
     <script src="script.js"></script>  
   </body>
